ignored some netbeans config files

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,11 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+Indexer/nbproject/private/private.properties
+Indexer/nbproject/private/private.xml
+Searcher/nbproject/private/private.xml
+Searcher/nbproject/private/private.properties
+Indexer/nbproject/private/private.properties
+Searcher/nbproject/private/private.properties
+Indexer/nbproject/private/private.properties
+Searcher/nbproject/private/private.properties
