--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ Indexer/nbproject/private/private.properties
 Indexer/nbproject/private/private.xml
 Searcher/nbproject/private/private.properties
 Searcher/nbproject/private/private.xml
+Indexer/index
+*.class
