moved libraries in a common folder

--- a/Indexer/nbproject/project.properties
+++ b/Indexer/nbproject/project.properties
@@ -29,9 +29,9 @@ dist.jar=${dist.dir}/Indexer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.lucene-analyzers-common-5.0.0.jar=lib\\lucene-analyzers-common-5.0.0.jar
-file.reference.lucene-core-5.0.0.jar=lib\\lucene-core-5.0.0.jar
-file.reference.tika-app-1.7.jar=lib\\tika-app-1.7.jar
+file.reference.lucene-analyzers-common-5.0.0.jar=..\\libs\\lucene-analyzers-common-5.0.0.jar
+file.reference.lucene-core-5.0.0.jar=../libs/lucene-core-5.0.0.jar
+file.reference.tika-app-1.7.jar=../libs/tika-app-1.7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
