--- a/Searcher/nbproject/project.properties
+++ b/Searcher/nbproject/project.properties
@@ -29,9 +29,9 @@ dist.jar=${dist.dir}/Searcher.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.lucene-analyzers-common-5.0.0.jar=lib\\lucene-analyzers-common-5.0.0.jar
-file.reference.lucene-core-5.0.0.jar=lib\\lucene-core-5.0.0.jar
-file.reference.lucene-queryparser-5.0.0.jar=lib\\lucene-queryparser-5.0.0.jar
+file.reference.lucene-analyzers-common-5.0.0.jar=../libs/lucene-analyzers-common-5.0.0.jar
+file.reference.lucene-core-5.0.0.jar=../libs/lucene-core-5.0.0.jar
+file.reference.lucene-queryparser-5.0.0.jar=../libs/lucene-queryparser-5.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
