revert netbeans config files + relative run parameters

--- a/Searcher/nbproject/private/private.properties
+++ b/Searcher/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-application.args=-index C:\\Users\\Piter2\\Documents\\NetBeansProjects\\Indexer\\index\\ -queries C:\\Users\\Piter2\\Documents\\NetBeansProjects\\Searcher\\queries\\queries.txt
+application.args=-index ..\\Indexer\\index\\ -queries .\\queries\\queries.txt
 compile.on.save=true
 do.depend=false
 do.jar=true
