Refactored RomanianFoldingAnalyzer to a common library

--- a/Common/nbproject/project.properties
+++ b/Common/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Indexer
-application.vendor=Piter2
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -25,20 +24,16 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Indexer.jar
+dist.jar=${dist.dir}/Common.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
 file.reference.lucene-analyzers-common-5.0.0.jar=..\\libs\\lucene-analyzers-common-5.0.0.jar
-file.reference.lucene-core-5.0.0.jar=../libs/lucene-core-5.0.0.jar
-file.reference.tika-app-1.7.jar=../libs/tika-app-1.7.jar
+file.reference.lucene-core-5.0.0.jar=..\\libs\\lucene-core-5.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.lucene-analyzers-common-5.0.0.jar}:\
-    ${file.reference.lucene-core-5.0.0.jar}:\
-    ${file.reference.tika-app-1.7.jar}:\
-    ${reference.Common.jar}
+    ${file.reference.lucene-core-5.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,13 +57,9 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=indexer.Indexer
-manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
+mkdist.disabled=true
 platform.active=default_platform
-project.Common=../Common
-reference.Common.jar=${project.Common}/dist/Common.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
