--- a/Searcher/nbproject/project.properties
+++ b/Searcher/nbproject/project.properties
@@ -37,7 +37,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.lucene-analyzers-common-5.0.0.jar}:\
     ${file.reference.lucene-core-5.0.0.jar}:\
-    ${file.reference.lucene-queryparser-5.0.0.jar}
+    ${file.reference.lucene-queryparser-5.0.0.jar}:\
+    ${reference.Common.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -66,6 +67,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.Common=../Common
+reference.Common.jar=${project.Common}/dist/Common.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
