ignore netbeans private config files

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,8 @@ Indexer/build
 Indexer/dist
 Searcher/build
 Searcher/dist
+/Indexer/nbproject/private/
+/Searcher/nbproject/private/
 /Common/nbproject/private/
 /Common/dist/
 /Common/build/
