--- a/Common/nbproject/private/private.properties
+++ b/Common/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\marian.biter\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\Piter\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
